--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "train",
+  "name": "connector",
   "version": "0.1.0",
   "main": "index.js",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
@@ -26,9 +26,11 @@
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "eslint": "^7.10.0",
     "husky": "^4.3.0",
     "jest": "^26.5.0",
     "nodemon": "^2.0.4",
+    "pino-pretty": "^4.2.1",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
@@ -36,9 +38,11 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
-    "@hapi/hapi": "^20.0.1",
-    "@types/hapi__hapi": "^20.0.1",
     "dotenv": "^8.2.0",
-    "extra-promise": "^0.9.0"
+    "extra-promise": "^0.9.0",
+    "fastify": "^3.5.1",
+    "fastify-cors": "^4.1.0",
+    "fastify-websocket": "^2.0.8",
+    "rxjs": "^7.0.0-beta.7"
   }
 }
