--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.2",
-    "@typescript-eslint/eslint-plugin": "^4.3.0",
-    "@typescript-eslint/parser": "^4.3.0",
+    "@types/node": "^14.11.5",
+    "@types/ws": "^7.2.7",
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
     "eslint": "^7.10.0",
     "husky": "^4.3.0",
-    "jest": "^26.5.0",
+    "jest": "^26.5.2",
     "nodemon": "^2.0.4",
-    "pino-pretty": "^4.2.1",
+    "pino-pretty": "^4.3.0",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
@@ -42,7 +43,7 @@
     "extra-promise": "^0.9.0",
     "fastify": "^3.5.1",
     "fastify-cors": "^4.1.0",
-    "fastify-websocket": "^2.0.8",
+    "fastify-websocket": "^2.0.9",
     "rxjs": "^7.0.0-beta.7"
   }
 }
