--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/app-root-path": "^1.2.4",
+    "@types/better-sqlite3": "^5.4.0",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.5",
     "@types/ws": "^7.2.7",
@@ -39,6 +41,8 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "app-root-path": "^3.0.0",
+    "better-sqlite3": "^7.1.1",
     "dotenv": "^8.2.0",
     "extra-promise": "^0.9.0",
     "fastify": "^3.5.1",
