feat: port features from MPMC

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "connector",
+  "private": true,
+  "name": "pubsub",
   "version": "0.1.0",
-  "main": "index.js",
+  "main": "lib/index.js",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
@@ -10,30 +11,55 @@
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "coverage": "jest --coverage --config jest.config.js",
     "dev": "nodemon",
+    "dev:http2": "PUBSUB_HTTP2=true nodemon",
     "dev:debug": "node --inspect-brk --files -r tsconfig-paths/register -r dotenv/config src/index.ts | pino-pretty",
     "prepublishOnly": "yarn clean && yarn build",
     "clean": "rm -rf lib",
-    "build": "tsc --project tsconfig.build.json && tscpaths -p tsconfig.build.json -s ./src -o ./lib",
-    "start": "yarn clean && yarn build && node lib/index.js",
-    "docker:build": "docker build -t refile .",
-    "docker:dev": "docker run --rm -it refile dev",
-    "docker:test": "docker run -e CI=true refile test"
+    "build": "cross-env NODE_ENV=production tsc --project tsconfig.build.json && tscpaths --project tsconfig.build.json --src ./src --out ./lib",
+    "start": "cross-env NODE_ENV=production node lib/index.js",
+    "start:http2": "cross-env NODE_ENV=production PUBSUB_HTTP2=true node lib/index.js",
+    "docker:build": "docker build --tag pubsub .",
+    "docker:test": "docker-compose --file docker-compose.test.yml run --rm sut",
+    "release": "standard-version"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && yarn test && yarn build",
+      "commit-msg": "commitlint --env HUSKY_GIT_PARAMS"
+    }
+  },
+  "engines": {
+    "node": ">=12"
   },
   "devDependencies": {
+    "@blackglory/jest-matchers": "^0.1.1",
+    "@blackglory/wait-for": "^0.1.5",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.0",
+    "@types/eventsource": "^1.1.4",
+    "@types/fs-extra": "^9.0.2",
     "@types/jest": "^26.0.14",
-    "@types/node": "^14.11.5",
+    "@types/jest-json-schema": "^2.1.2",
+    "@types/node": "^14.11.10",
+    "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.2.7",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "eslint": "^7.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.4.1",
+    "@typescript-eslint/parser": "^4.4.1",
+    "ajv": "^7.0.0-beta.1",
+    "cross-env": "^7.0.2",
+    "eslint": "^7.11.0",
+    "eventsource": "^1.0.7",
     "husky": "^4.3.0",
-    "jest": "^26.5.2",
-    "nodemon": "^2.0.4",
+    "jest": "^26.5.3",
+    "jest-extended": "^0.11.5",
+    "jest-json-schema": "^2.1.0",
+    "light-my-request": "^4.2.0",
+    "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.5",
     "pino-pretty": "^4.3.0",
+    "standard-version": "^9.0.0",
     "ts-jest": "^26.4.1",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
@@ -41,14 +67,19 @@
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@blackglory/better-sqlite3-migrations": "^0.1.1",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.1",
     "dotenv": "^8.2.0",
-    "extra-promise": "^0.9.0",
-    "fastify": "^3.5.1",
+    "extra-promise": "^0.9.1",
+    "fastify": "^3.6.0",
+    "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^4.1.0",
-    "fastify-plugin": "^2.3.4",
-    "fastify-websocket": "^2.0.9",
+    "fastify-plugin": "^3.0.0",
+    "fastify-websocket": "^2.0.10",
+    "fs-extra": "^9.0.1",
+    "migrations-file": "^0.1.1",
+    "return-style": "^0.10.1",
     "rxjs": "^7.0.0-beta.7"
   }
 }
