--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "ws": "^7.3.1"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
