--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "pubsub",
   "version": "0.1.0",
   "main": "lib/index.js",
+  "repository": "git@github.com:BlackGlory/pubsub.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
   "scripts": {
