--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,7 @@
     , "@dao/*": ["src/dao/*"]
     , "@core": ["src/core/index"]
     , "@core/*": ["src/core/*"]
-    , "@config": ["src/config"]
+    , "@env": ["src/env"]
     , "@test/*": ["__tests__/*"]
     , "@services/*": ["src/services/*"]
     }
