--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "node": ">=12"
   },
   "devDependencies": {
-    "@blackglory/jest-matchers": "^0.1.4",
+    "@blackglory/jest-matchers": "^0.1.5",
     "@blackglory/wait-for": "^0.2.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
@@ -39,17 +39,17 @@
     "@types/better-sqlite3": "^5.4.1",
     "@types/eventsource": "^1.1.5",
     "@types/fs-extra": "^9.0.4",
-    "@types/jest": "^26.0.15",
+    "@types/jest": "^26.0.17",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^14.14.9",
+    "@types/node": "^14.14.11",
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "cross-env": "^7.0.2",
-    "eslint": "^7.14.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
+    "@typescript-eslint/parser": "^4.9.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.15.0",
     "eventsource": "^1.0.7",
-    "husky": "^4.3.0",
+    "husky": "^4.3.5",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^2.1.0",
@@ -58,20 +58,20 @@
     "pino-pretty": "^4.3.0",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
-    "ts-node": "^9.0.0",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.1.2",
-    "ws": "^7.4.0"
+    "ws": "^7.4.1"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
-    "ajv": "^7.0.0-beta.7",
+    "ajv": "^7.0.0-rc.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.1",
     "dotenv": "^8.2.0",
     "extra-promise": "^0.9.5",
-    "fastify": "^3.8.0",
+    "fastify": "^3.9.1",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^5.0.0",
     "fastify-plugin": "^3.0.0",
@@ -79,6 +79,6 @@
     "fs-extra": "^9.0.1",
     "migrations-file": "^0.1.1",
     "return-style": "^0.10.1",
-    "rxjs": "^7.0.0-beta.8"
+    "rxjs": "^7.0.0-beta.9"
   }
 }
