--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/fs-extra": "^9.0.4",
     "@types/jest": "^26.0.17",
     "@types/jest-json-schema": "^2.1.3",
+    "@types/lodash": "^4.14.165",
     "@types/node": "^14.14.11",
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.4.0",
@@ -77,6 +78,7 @@
     "fastify-plugin": "^3.0.0",
     "fastify-websocket": "^2.0.11",
     "fs-extra": "^9.0.1",
+    "lodash": "^4.17.20",
     "migrations-file": "^0.1.1",
     "return-style": "^0.10.1",
     "rxjs": "^7.0.0-beta.9"
