--- a/package.json
+++ b/package.json
@@ -42,11 +42,11 @@
     "@types/jest": "^26.0.19",
     "@types/jest-json-schema": "^2.1.3",
     "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.13",
+    "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.15.0",
     "eventsource": "^1.0.7",
@@ -69,7 +69,7 @@
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
     "@blackglory/errors": "^0.1.0",
     "@blackglory/types": "^0.1.9",
-    "ajv": "^7.0.0-rc.2",
+    "ajv": "^7.0.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.1",
     "dotenv": "^8.2.0",
