--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
+    "@types/common-tags": "^1.8.0",
     "@types/eventsource": "^1.1.5",
     "@types/fs-extra": "^9.0.5",
     "@types/jest": "^26.0.19",
@@ -72,6 +73,7 @@
     "ajv": "^7.0.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.1",
+    "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
     "extra-promise": "^0.9.5",
     "fastify": "^3.9.2",
