refactor: use @blackglory/structures

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
     "@blackglory/errors": "^0.1.2",
+    "@blackglory/structures": "^0.1.2",
     "@blackglory/types": "^0.1.9",
     "ajv": "^7.0.0",
     "app-root-path": "^3.0.0",
