--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "node": ">=12"
   },
   "devDependencies": {
-    "@blackglory/jest-matchers": "^0.1.5",
+    "@blackglory/jest-matchers": "^0.1.7",
     "@blackglory/wait-for": "^0.2.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
@@ -39,17 +39,16 @@
     "@types/better-sqlite3": "^5.4.1",
     "@types/common-tags": "^1.8.0",
     "@types/eventsource": "^1.1.5",
-    "@types/fs-extra": "^9.0.5",
+    "@types/fs-extra": "^9.0.6",
     "@types/jest": "^26.0.19",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/lodash": "^4.14.165",
-    "@types/node": "^14.14.14",
+    "@types/node": "^14.14.16",
     "@types/node-fetch": "^2.5.7",
     "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.15.0",
+    "eslint": "^7.16.0",
     "eventsource": "^1.0.7",
     "husky": "^4.3.6",
     "jest": "^26.6.3",
@@ -69,23 +68,23 @@
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.1",
     "@blackglory/errors": "^0.1.2",
-    "@blackglory/structures": "^0.1.2",
-    "@blackglory/types": "^0.1.9",
-    "ajv": "^7.0.0",
+    "@blackglory/structures": "^0.1.3",
+    "@blackglory/types": "^0.2.1",
+    "ajv": "^7.0.2",
     "app-root-path": "^3.0.0",
-    "better-sqlite3": "^7.1.1",
+    "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
-    "extra-promise": "^0.9.5",
+    "extra-promise": "^0.13.7",
     "fastify": "^3.9.2",
     "fastify-bearer-auth": "^5.0.2",
     "fastify-cors": "^5.1.0",
     "fastify-plugin": "^3.0.0",
     "fastify-websocket": "^2.0.11",
     "fs-extra": "^9.0.1",
-    "lodash": "^4.17.20",
     "migrations-file": "^0.1.1",
     "return-style": "^0.10.1",
-    "rxjs": "^7.0.0-beta.9"
+    "rxjs": "^7.0.0-beta.9",
+    "value-getter": "^0.1.2"
   }
 }
