--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build:compile": "cross-env NODE_ENV=production tsc --project tsconfig.build.json",
     "build:patch": "tscpaths --project tsconfig.build.json --src ./src --out ./lib",
     "start": "cross-env NODE_ENV=production node lib/index.js",
+    "start:pm2": "cross-env NODE_ENV=production pm2 start lib/index.js --name 'pubsub' --wait-ready",
     "start:http2": "cross-env NODE_ENV=production PUBSUB_HTTP2=true node lib/index.js",
     "docker:build": "docker build --tag pubsub .",
     "docker:test": "docker-compose --file docker-compose.test.yml run --rm sut",
@@ -60,6 +61,7 @@
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^4.3.0",
+    "pm2": "^4.5.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.1.0",
     "ts-jest": "^26.4.4",
