--- a/package.json
+++ b/package.json
@@ -41,23 +41,20 @@
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
     "@types/common-tags": "^1.8.0",
-    "@types/eventsource": "^1.1.5",
     "@types/fs-extra": "^9.0.6",
     "@types/jest": "^26.0.20",
     "@types/jest-json-schema": "^2.1.3",
     "@types/node": "^14.14.22",
-    "@types/node-fetch": "^2.5.8",
     "@types/ws": "^7.4.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.18.0",
-    "eventsource": "^1.0.7",
+    "extra-fetch": "^0.1.10",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^5.0.0",
-    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^4.3.0",
@@ -90,7 +87,7 @@
     "fs-extra": "^9.1.0",
     "migrations-file": "^0.1.1",
     "return-style": "^0.11.4",
-    "rxjs": "^7.0.0-beta.9",
+    "rxjs": "^7.0.0-beta.10",
     "value-getter": "^0.1.7"
   }
 }
