--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
+    "extra-generator": "^0.1.3",
     "extra-promise": "^0.13.15",
     "fastify": "^3.11.0",
     "fastify-bearer-auth": "^5.0.2",
