--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "@types/jest-json-schema": "^2.1.3",
     "@types/node": "^14.14.25",
     "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@typescript-eslint/eslint-plugin": "^4.15.0",
+    "@typescript-eslint/parser": "^4.15.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.19.0",
     "extra-fetch": "^1.0.2",
-    "husky": "^4.3.8",
+    "husky": "4",
     "jest": "^26.6.3",
     "jest-extended": "^0.11.5",
     "jest-json-schema": "^5.0.0",
@@ -61,19 +61,19 @@
     "pm2": "^4.5.4",
     "rimraf": "^3.0.2",
     "standard-version": "^9.1.0",
-    "ts-jest": "^26.5.0",
+    "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.1.3",
+    "typescript": "^4.1.5",
     "ws": "^7.4.3"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.2",
     "@blackglory/errors": "^1.1.2",
     "@blackglory/structures": "^0.1.12",
-    "@blackglory/types": "^0.2.14",
-    "ajv": "^7.0.4",
+    "@blackglory/types": "^0.2.15",
+    "ajv": "^7.1.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
@@ -87,7 +87,7 @@
     "fastify-websocket": "^3.0.0",
     "fs-extra": "^9.1.0",
     "migrations-file": "^0.1.3",
-    "return-style": "^0.11.6",
+    "return-style": "^0.12.1",
     "rxjs": "^7.0.0-beta.10",
     "value-getter": "^0.1.8"
   }
