--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "devDependencies": {
     "@blackglory/jest-matchers": "^0.1.12",
-    "@blackglory/wait-for": "^0.2.9",
+    "@blackglory/wait-for": "^0.2.10",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
     "@types/app-root-path": "^1.2.4",
@@ -44,10 +44,10 @@
     "@types/fs-extra": "^9.0.8",
     "@types/jest": "^26.0.20",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^14.14.31",
+    "@types/node": "^14.14.33",
     "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.17.0",
+    "@typescript-eslint/parser": "^4.17.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.21.0",
     "extra-fetch": "^1.2.0",
@@ -57,7 +57,7 @@
     "jest-json-schema": "^5.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^4.7.0",
+    "pino-pretty": "^4.7.1",
     "pm2": "^4.5.5",
     "rimraf": "^3.0.2",
     "standard-version": "^9.1.1",
@@ -66,32 +66,32 @@
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
     "typescript": "^4.2.3",
-    "ws": "^7.4.3"
+    "ws": "^7.4.4"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.5",
     "@blackglory/errors": "^1.1.2",
     "@blackglory/go": "^0.1.0",
     "@blackglory/structures": "^0.1.13",
-    "@blackglory/types": "^0.3.0",
-    "ajv": "^7.1.1",
+    "@blackglory/types": "^0.3.3",
+    "ajv": "^7.2.1",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.1.2",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
-    "extra-generator": "^0.1.4",
+    "extra-generator": "^0.1.6",
     "extra-promise": "^0.15.4",
     "fastify": "^3.13.0",
     "fastify-bearer-auth": "^5.1.0",
     "fastify-cors": "^5.2.0",
     "fastify-metrics": "^7.1.0",
     "fastify-plugin": "^3.0.0",
-    "fastify-websocket": "^3.0.1",
+    "fastify-websocket": "3.0.1",
     "fs-extra": "^9.1.0",
-    "migrations-file": "^0.1.4",
+    "migrations-file": "^0.1.5",
     "prom-client": "^13.1.0",
     "return-style": "^0.12.2",
     "rxjs": "^7.0.0-beta.10",
-    "value-getter": "^0.1.11"
+    "value-getter": "^0.1.12"
   }
 }
