--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.2.3",
-    "ws": "^7.4.4"
+    "typescript": "^4.2.3"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.5",
@@ -90,12 +89,12 @@
     "fastify-cors": "^5.2.0",
     "fastify-metrics": "^7.1.0",
     "fastify-plugin": "^3.0.0",
-    "fastify-websocket": "3.0.1",
     "fs-extra": "^9.1.0",
     "migrations-file": "^0.1.5",
     "prom-client": "^13.1.0",
     "return-style": "^0.12.2",
     "rxjs": "^7.0.0-beta.12",
-    "value-getter": "^0.1.12"
+    "value-getter": "^0.1.12",
+    "ws": "^7.4.4"
   }
 }
