--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "test:coverage": "jest --coverage --config jest.config.js",
     "dev": "nodemon",
-    "dev:http2": "PUBSUB_HTTP2=true nodemon",
+    "dev:http2": "cross-env PUBSUB_HTTP2=true nodemon",
     "clean": "rimraf lib",
     "build": "run-s build:*",
-    "build:compile": "cross-env NODE_ENV=production tsc --project tsconfig.build.json",
+    "build:compile": "tsc --project tsconfig.build.json",
     "build:patch": "tscpaths --project tsconfig.build.json --src ./src --out ./lib",
-    "start": "cross-env NODE_ENV=production node lib/index.js",
-    "start:pm2": "cross-env NODE_ENV=production pm2 start lib/index.js --name 'pubsub' --wait-ready",
-    "start:http2": "cross-env NODE_ENV=production PUBSUB_HTTP2=true node lib/index.js",
+    "start": "node lib/index.js",
+    "start:pm2": "pm2 start lib/index.js --name 'pubsub' --wait-ready",
+    "start:http2": "cross-env PUBSUB_HTTP2=true node lib/index.js",
     "docker:build": "docker build --tag pubsub .",
     "docker:test": "docker-compose --file docker-compose.test.yml run --rm sut",
     "release": "standard-version"
