--- a/package.json
+++ b/package.json
@@ -35,24 +35,24 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.0",
-    "@blackglory/jest-matchers": "^0.1.14",
-    "@blackglory/wait-for": "^0.2.12",
-    "@commitlint/cli": "^12.0.1",
-    "@commitlint/config-conventional": "^12.0.1",
+    "@blackglory/jest-matchers": "^0.1.15",
+    "@blackglory/wait-for": "^0.3.0",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
     "@types/common-tags": "^1.8.0",
-    "@types/fs-extra": "^9.0.9",
-    "@types/jest": "^26.0.22",
+    "@types/fs-extra": "^9.0.11",
+    "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^14.14.37",
-    "@types/ws": "^7.4.0",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
+    "@types/node": "^15.0.1",
+    "@types/ws": "^7.4.2",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "cross-env": "^7.0.3",
-    "eslint": "^7.23.0",
-    "extra-fetch": "^1.5.0",
-    "extra-request": "^2.1.2",
+    "eslint": "^7.25.0",
+    "extra-fetch": "^1.7.0",
+    "extra-request": "^2.1.3",
     "extra-response": "^0.3.4",
     "husky": "4",
     "jest": "^26.6.3",
@@ -61,42 +61,42 @@
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^4.7.1",
-    "pm2": "^4.5.5",
+    "pm2": "^4.5.6",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.1.1",
-    "ts-jest": "^26.5.4",
+    "standard-version": "^9.2.0",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.6",
     "@blackglory/errors": "^1.1.2",
     "@blackglory/go": "^0.1.0",
     "@blackglory/structures": "^0.1.14",
-    "@blackglory/types": "^0.4.1",
-    "ajv": "^8.0.0",
+    "@blackglory/types": "^0.4.2",
+    "ajv": "^8.2.0",
     "app-root-path": "^3.0.0",
-    "better-sqlite3": "^7.1.2",
+    "better-sqlite3": "^7.1.5",
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
     "extra-generator": "^0.2.1",
     "extra-promise": "^0.16.2",
     "extra-timers": "^0.2.1",
-    "fastify": "^3.14.1",
+    "fastify": "^3.15.0",
     "fastify-bearer-auth": "^5.1.0",
     "fastify-cors": "^5.2.0",
     "fastify-metrics": "^7.1.0",
     "fastify-plugin": "^3.0.0",
     "fs-extra": "^9.1.0",
-    "hotypes": "^0.1.4",
+    "hotypes": "^0.1.9",
     "justypes": "^0.1.1",
     "migrations-file": "^0.1.7",
     "prom-client": "^13.1.0",
     "return-style": "^0.12.3",
-    "rxjs": "^7.0.0-beta.13",
+    "rxjs": "^7.0.0-rc.2",
     "value-getter": "^0.1.13",
-    "ws": "^7.4.4"
+    "ws": "^7.4.5"
   }
 }
