--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "@types/fs-extra": "^9.0.11",
     "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^15.0.1",
+    "@types/node": "^15.0.2",
     "@types/ws": "^7.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "cross-env": "^7.0.3",
     "eslint": "^7.25.0",
-    "extra-fetch": "^1.7.0",
-    "extra-request": "^2.1.3",
+    "extra-fetch": "^1.7.1",
+    "extra-request": "^2.1.4",
     "extra-response": "^0.3.4",
     "husky": "4",
     "jest": "^26.6.3",
@@ -63,8 +63,8 @@
     "pino-pretty": "^4.7.1",
     "pm2": "^4.5.6",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.2.0",
-    "ts-jest": "^26.5.5",
+    "standard-version": "^9.3.0",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
     "tscpaths": "^0.0.9",
@@ -78,25 +78,25 @@
     "@blackglory/types": "^0.4.2",
     "ajv": "^8.2.0",
     "app-root-path": "^3.0.0",
-    "better-sqlite3": "^7.1.5",
+    "better-sqlite3": "^7.3.1",
     "common-tags": "^1.8.0",
-    "dotenv": "^8.2.0",
-    "extra-generator": "^0.2.1",
-    "extra-promise": "^0.16.2",
+    "dotenv": "^9.0.0",
+    "extra-generator": "^0.2.4",
+    "extra-promise": "^0.16.4",
     "extra-timers": "^0.2.1",
-    "fastify": "^3.15.0",
+    "fastify": "^3.15.1",
     "fastify-bearer-auth": "^5.1.0",
-    "fastify-cors": "^5.2.0",
+    "fastify-cors": "^6.0.1",
     "fastify-metrics": "^7.1.0",
     "fastify-plugin": "^3.0.0",
-    "fs-extra": "^9.1.0",
-    "hotypes": "^0.1.9",
+    "fs-extra": "^10.0.0",
+    "hotypes": "^0.2.0",
     "justypes": "^0.1.1",
     "migrations-file": "^0.1.7",
     "prom-client": "^13.1.0",
     "return-style": "^0.12.3",
-    "rxjs": "^7.0.0-rc.2",
-    "value-getter": "^0.1.13",
+    "rxjs": "^7.0.0",
+    "value-getter": "^0.1.14",
     "ws": "^7.4.5"
   }
 }
