--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "better-sqlite3": "^7.3.1",
     "common-tags": "^1.8.0",
     "dotenv": "^9.0.0",
+    "extra-filesystem": "^0.2.11",
     "extra-generator": "^0.2.4",
     "extra-promise": "^0.16.4",
     "extra-timers": "^0.2.1",
@@ -89,7 +90,6 @@
     "fastify-cors": "^6.0.1",
     "fastify-metrics": "^7.1.0",
     "fastify-plugin": "^3.0.0",
-    "fs-extra": "^10.0.0",
     "hotypes": "^0.2.0",
     "justypes": "^0.1.1",
     "migrations-file": "^0.1.7",
