--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --config jest.config.js",
+    "test": "jest --runInBand --config jest.config.js",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:coverage": "jest --coverage --config jest.config.js",
+    "test:coverage": "jest --runInBand --coverage --config jest.config.js",
     "dev": "nodemon",
     "dev:http2": "cross-env PUBSUB_HTTP2=true nodemon",
     "clean": "rimraf lib",
@@ -35,19 +35,19 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.0",
-    "@blackglory/jest-matchers": "^0.1.16",
+    "@blackglory/jest-matchers": "^0.1.17",
     "@blackglory/wait-for": "^0.3.0",
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.1.1",
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.1",
     "@types/common-tags": "^1.8.0",
     "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
     "@types/node": "^14.14.44",
-    "@types/ws": "^7.4.2",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
+    "@types/ws": "^7.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "cross-env": "^7.0.3",
     "eslint": "^7.26.0",
     "extra-fetch": "^1.7.1",
@@ -59,7 +59,7 @@
     "jest-json-schema": "^5.0.0",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^4.7.1",
+    "pino-pretty": "^4.8.0",
     "pm2": "^4.5.6",
     "rimraf": "^3.0.2",
     "standard-version": "^9.3.0",
@@ -75,13 +75,13 @@
     "@blackglory/go": "^0.1.0",
     "@blackglory/structures": "^0.1.14",
     "@blackglory/types": "^0.4.2",
-    "ajv": "^8.2.0",
+    "ajv": "^8.3.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.3.1",
     "common-tags": "^1.8.0",
-    "dotenv": "^9.0.0",
-    "extra-filesystem": "^0.2.11",
-    "extra-generator": "^0.2.4",
+    "dotenv": "^9.0.2",
+    "extra-filesystem": "^0.3.0",
+    "extra-generator": "^0.2.5",
     "extra-promise": "^0.16.4",
     "extra-timers": "^0.2.1",
     "fastify": "^3.15.1",
@@ -94,7 +94,7 @@
     "migrations-file": "^0.1.7",
     "prom-client": "^13.1.0",
     "return-style": "^0.12.3",
-    "rxjs": "^7.0.0",
+    "rxjs": "^7.0.1",
     "value-getter": "^0.1.14",
     "ws": "^7.4.5"
   }
