--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start:pm2": "pm2 start lib/index.js --name 'pubsub' --wait-ready",
     "start:http2": "cross-env PUBSUB_HTTP2=true node lib/index.js",
     "docker:build": "docker build --tag pubsub .",
-    "docker:test": "docker-compose --file docker-compose.test.yml run --rm sut",
+    "docker:test": "docker-compose --file docker-compose.test.yml run --rm test",
     "release": "standard-version"
   },
   "husky": {
