--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@commitlint/config-conventional": "^12.1.4",
     "@types/app-root-path": "^1.2.4",
     "@types/better-sqlite3": "^5.4.2",
-    "@types/common-tags": "^1.8.0",
     "@types/jest": "^26.0.23",
     "@types/jest-json-schema": "^2.1.3",
     "@types/node": "^14.14.44",
@@ -78,11 +77,11 @@
     "ajv": "^8.6.0",
     "app-root-path": "^3.0.0",
     "better-sqlite3": "^7.4.1",
-    "common-tags": "^1.8.0",
     "dotenv": "^10.0.0",
     "extra-filesystem": "^0.3.2",
     "extra-generator": "^0.2.6",
     "extra-promise": "^0.17.4",
+    "extra-tags": "^0.2.0",
     "extra-timers": "^0.2.1",
     "fastify": "^3.18.1",
     "fastify-bearer-auth": "^6.0.0",
