--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@types/better-sqlite3": "^7.4.1",
     "@types/jest": "^27.0.3",
     "@types/jest-json-schema": "^2.1.3",
-    "@types/node": "^14.14.44",
+    "@types/node": "16",
     "@types/ws": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
