--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@types/jest": "^27.4.0",
     "@types/jest-json-schema": "^2.1.4",
     "@types/node": "16",
+    "@types/semver": "^7.3.9",
     "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
@@ -93,6 +94,7 @@
     "prom-client": "^14.0.1",
     "return-style": "^0.12.6",
     "rxjs": "^7.5.2",
+    "semver": "^7.3.5",
     "value-getter": "^0.2.2",
     "ws": "^8.4.2"
   }
