--- a/package.json
+++ b/package.json
@@ -34,65 +34,65 @@
   },
   "devDependencies": {
     "@blackglory/http-status": "^1.0.1",
-    "@blackglory/jest-matchers": "^0.2.1",
-    "@commitlint/cli": "^16.2.1",
-    "@commitlint/config-conventional": "^16.2.1",
+    "@blackglory/jest-matchers": "0.3",
+    "@commitlint/cli": "^17.0.2",
+    "@commitlint/config-conventional": "^17.0.2",
     "@types/app-root-path": "^1.2.4",
-    "@types/better-sqlite3": "^7.4.2",
-    "@types/jest": "^27.4.0",
+    "@types/better-sqlite3": "^7.5.0",
+    "@types/jest": "27",
     "@types/jest-json-schema": "^6.1.0",
     "@types/node": "16",
-    "@types/ws": "^8.2.2",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@types/ws": "^8.5.3",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
     "cross-env": "^7.0.3",
-    "eslint": "^8.9.0",
+    "eslint": "^8.17.0",
     "extra-fetch": "^1.8.5",
     "extra-request": "^4.0.1",
-    "extra-response": "^0.3.9",
+    "extra-response": "^0.3.11",
     "husky": "4",
-    "jest": "^27.5.1",
+    "jest": "27",
     "jest-extended": "^2.0.0",
     "jest-json-schema": "^6.1.0",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^7.5.1",
+    "pino-pretty": "^8.0.0",
     "rimraf": "^3.0.2",
-    "standard-version": "^9.3.2",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "tsconfig-paths": "^3.12.0",
+    "standard-version": "^9.5.0",
+    "ts-jest": "27",
+    "ts-node": "^10.8.1",
+    "tsconfig-paths": "^4.0.0",
     "tscpaths": "^0.0.9",
-    "typescript": "^4.5.5"
+    "typescript": "^4.7.3"
   },
   "dependencies": {
     "@blackglory/better-sqlite3-migrations": "^0.1.9",
-    "@blackglory/errors": "^2.2.0",
-    "@blackglory/go": "^0.1.1",
-    "@blackglory/structures": "^0.3.4",
-    "@blackglory/types": "^0.6.5",
-    "@blackglory/wait-for": "^0.4.2",
-    "ajv": "^8.10.0",
+    "@blackglory/errors": "^2.2.1",
+    "@blackglory/go": "^1.0.0",
+    "@blackglory/structures": "^0.6.0",
+    "@blackglory/types": "^1.1.0",
+    "@blackglory/wait-for": "^0.5.0",
+    "@fastify/bearer-auth": "^7.0.1",
+    "@fastify/cors": "^7.0.0",
+    "ajv": "^8.11.0",
     "app-root-path": "^3.0.0",
-    "better-sqlite3": "^7.5.0",
-    "dotenv": "^16.0.0",
-    "extra-filesystem": "^0.4.0",
-    "extra-generator": "^0.2.15",
-    "extra-promise": "^0.21.2",
+    "better-sqlite3": "^7.5.3",
+    "dotenv": "^16.0.1",
+    "extra-filesystem": "^0.4.2",
+    "extra-generator": "^0.2.16",
+    "extra-promise": "^2.0.0",
     "extra-semver": "^0.1.0",
     "extra-tags": "^0.2.4",
     "extra-timers": "^0.2.5",
-    "fastify": "^3.27.1",
-    "fastify-bearer-auth": "^6.2.0",
-    "fastify-cors": "^6.0.2",
+    "fastify": "^3.29.0",
     "fastify-metrics": "^8.0.0",
     "fastify-plugin": "^3.0.1",
-    "justypes": "^0.1.6",
-    "migrations-file": "^0.2.1",
+    "justypes": "^2.0.0",
+    "migrations-file": "^0.2.2",
     "prom-client": "^14.0.1",
-    "return-style": "^0.12.6",
-    "rxjs": "^7.5.4",
-    "value-getter": "^0.2.2",
-    "ws": "^8.5.0"
+    "return-style": "^1.0.0",
+    "rxjs": "^7.5.5",
+    "value-getter": "^0.2.4",
+    "ws": "^8.7.0"
   }
 }
