--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "rxjs": "^7.5.6",
     "utf-8-validate": "^5.0.9",
     "value-getter": "^0.2.4",
-    "ws": "^8.8.1"
+    "ws": "^8.8.1",
+    "you-died": "^0.4.2"
   }
 }
