--- a/package.json
+++ b/package.json
@@ -5,99 +5,99 @@
   "repository": "git@github.com:BlackGlory/pubsub.git",
   "author": "BlackGlory <woshenmedoubuzhidao@blackglory.me>",
   "license": "MIT",
+  "type": "module",
   "engines": {
     "node": ">=16"
   },
   "scripts": {
+    "prepare": "ts-patch install -s",
     "deduplicate": "yarn-deduplicate",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --quiet src __tests__",
-    "test": "jest --runInBand --config jest.config.js",
-    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "test:coverage": "jest --runInBand --coverage --config jest.config.js",
+    "test": "cross-env NODE_OPTIONS='--experimental-vm-modules --max_old_space_size=4096' jest --runInBand --no-cache --config jest.config.cjs",
+    "test:debug": "cross-env NODE_OPTIONS=--experimental-vm-modules node --inspect-brk jest --runInBand --config jest.config.cjs",
+    "test:coverage": "cross-env NODE_OPTIONS=--experimental-vm-modules jest --coverage --config jest.config.cjs",
     "dev": "nodemon",
-    "dev:http2": "cross-env PUBSUB_HTTP2=true nodemon",
-    "clean": "rimraf lib idst",
-    "build": "run-s build:*",
-    "build:compile": "tsc --project tsconfig.build.json",
-    "build:patch": "tscpaths --project tsconfig.build.json --src ./src --out ./lib",
+    "clean": "rimraf lib dist",
+    "build": "tsc --project tsconfig.build.json",
     "bundle": "webpack --stats-error-details",
     "start": "node dist/index.cjs",
-    "start:http2": "cross-env PUBSUB_HTTP2=true node dist/index.js",
     "smoke": "cross-env NODE_ENV=test node dist/index.cjs",
     "docker:build": "docker build --tag pubsub .",
-    "docker:test": "docker-compose --file docker-compose.test.yml run --rm test",
+    "docker:test": "run-s docker:test:clean docker:test:build docker:test:run",
+    "docker:coverage": "run-s docker:test:clean docker:test:build docker:test:coverage docker:test:clean",
+    "docker:test:build": "docker-compose --file docker-compose.test.yml build",
+    "docker:test:run": "docker-compose --file docker-compose.test.yml run --rm test",
+    "docker:test:coverage": "docker-compose --file docker-compose.test.yml run --rm coverage",
+    "docker:test:clean": "docker-compose --file docker-compose.test.yml down",
     "release": "standard-version"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "run-s clean lint build test bundle smoke",
+      "pre-commit": "run-s prepare clean lint build test bundle smoke",
       "commit-msg": "commitlint --env HUSKY_GIT_PARAMS"
     }
   },
   "devDependencies": {
-    "@blackglory/http-status": "^1.0.2",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
-    "@types/app-root-path": "^1.2.4",
-    "@types/better-sqlite3": "^7.6.0",
-    "@types/jest": "27",
+    "@blackglory/http-status": "^2.0.1",
+    "@blackglory/jest-resolver": "^0.3.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@types/better-sqlite3": "^7.6.3",
+    "@types/jest": "29.4.0",
     "@types/node": "16",
-    "@types/ws": "^8.5.3",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
+    "@types/ws": "^8.5.4",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.21.0",
-    "extra-fetch": "^1.8.5",
-    "extra-request": "^4.0.1",
-    "extra-response": "^0.3.11",
+    "eslint": "^8.33.0",
+    "extra-fetch": "^4.0.4",
+    "extra-request": "^8.1.6",
+    "extra-response": "^0.5.1",
     "husky": "4",
-    "jest": "27",
-    "nodemon": "^2.0.19",
+    "jest": "29.4.1",
+    "jest-resolve": "^29.4.1",
+    "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
-    "pino-pretty": "^8.1.0",
+    "pino-pretty": "^9.1.1",
     "rimraf": "^3.0.2",
     "standard-version": "^9.5.0",
-    "ts-jest": "27",
+    "ts-jest": "29.0.5",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.1.0",
-    "tscpaths": "^0.0.9",
+    "ts-patch": "^2.1.0",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "yarn-deduplicate": "^5.0.0"
+    "typescript-transform-paths": "^3.4.6",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "yarn-deduplicate": "^6.0.1"
   },
   "dependencies": {
-    "@blackglory/better-sqlite3-migrations": "^0.1.15",
-    "@blackglory/errors": "^2.2.2",
-    "@blackglory/go": "^1.1.2",
-    "@blackglory/structures": "^0.6.2",
-    "@blackglory/types": "^1.2.1",
-    "@blackglory/wait-for": "^0.5.1",
-    "@fastify/bearer-auth": "^7.0.1",
-    "@fastify/cors": "^7.0.0",
-    "ajv": "^8.11.0",
-    "app-root-path": "^3.0.0",
-    "better-sqlite3": "^7.6.2",
-    "bufferutil": "^4.0.6",
-    "dotenv": "^16.0.1",
-    "extra-filesystem": "^0.4.5",
-    "extra-generator": "^0.2.17",
-    "extra-lazy": "^1.3.1",
-    "extra-promise": "^2.4.1",
-    "extra-semver": "^0.1.0",
-    "extra-tags": "^0.2.5",
+    "@blackglory/better-sqlite3-migrations": "^0.1.16",
+    "@blackglory/errors": "^3.0.0",
+    "@blackglory/structures": "^0.13.1",
+    "@blackglory/wait-for": "^0.6.0",
+    "@fastify/bearer-auth": "^9.0.0",
+    "@fastify/cors": "^8.2.0",
+    "ajv": "^8.12.0",
+    "better-sqlite3": "^8.0.1",
+    "bufferutil": "^4.0.7",
+    "dotenv": "^16.0.3",
+    "extra-filesystem": "^0.4.10",
+    "extra-generator": "^0.3.3",
+    "extra-lazy": "^2.0.0",
+    "extra-promise": "^6.0.3",
+    "extra-semver": "^0.2.0",
+    "extra-tags": "^0.3.1",
     "extra-timers": "^0.2.5",
-    "fastify": "^3.29.0",
-    "fastify-metrics": "^8.0.0",
-    "fastify-plugin": "^3.0.1",
-    "justypes": "^2.0.1",
-    "migrations-file": "^0.2.4",
-    "prom-client": "^14.0.1",
-    "return-style": "^1.0.0",
-    "rxjs": "^7.5.6",
-    "utf-8-validate": "^5.0.9",
-    "value-getter": "^0.2.4",
-    "ws": "^8.8.1",
-    "you-died": "^0.4.2"
+    "fastify": "^4.12.0",
+    "justypes": "^4.1.0",
+    "migration-files": "^0.4.0",
+    "prom-client": "^14.1.1",
+    "return-style": "^2.0.3",
+    "rxjs": "^7.8.0",
+    "utf-8-validate": "^6.0.2",
+    "value-getter": "^0.3.0",
+    "ws": "^8.12.0",
+    "you-died": "^0.4.3"
   }
 }
