refactor: content types other than JSON are no longer supported
BREAKING CHANGE: Content types other than JSON are no longer supported

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,7 @@
   , "paths": {
       "@src/*": ["src/*"]
     , "@dao/*": ["src/dao/*"]
-    , "@api/*": ["src/api/*"]
+    , "@apis/*": ["src/apis/*"]
     , "@env/*": ["src/env/*"]
     , "@utils/*": ["src/utils/*"]
     , "@test/*": ["__tests__/*"]
