test: remove unused dependencies

--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -3,11 +3,7 @@ WORKDIR /usr/src/app
 
 COPY package.json yarn.lock ./
 
-RUN apk add --update --no-cache --virtual .build-deps \
-      # better-sqlite3
-      build-base \
-      python3 \
- && yarn install \
+RUN yarn install \
  && yarn cache clean \
  && apk del .build-deps
 
